# learning-portfolio-old

./: README.md
fastAI/Practical Deep Learning/: pyproject.toml
university/masters/data-visualisation/labs/: .gitignore  README.md  pyproject.toml
university/masters/data-visualisation/labs/labs/: definitions.py
university/masters/data-visualisation/labs/labs/lab_1/: README.md  main.html  main.ipynb
university/masters/data-visualisation/labs/labs/lab_2/: README.md  main.html  main.ipynb  redone.html  redone.ipynb
university/masters/data-visualisation/labs/labs/lab_3/: README.md  main.html  main.ipynb
university/masters/data-visualisation/labs/labs/lab_4/: README.md  main.html  main.ipynb
university/masters/data-visualisation/labs/labs/lab_5/: README.md  main.html  main.ipynb  nx.html
university/masters/data-visualisation/labs/labs/lab_6/: README.md  main.html  main.ipynb  pcaFunPvz.txt
university/masters/data-visualisation/midterm/: pyproject.toml
university/masters/data-visualisation/midterm/data/: Midterm data.xlsx
university/masters/data-visualisation/midterm/midterm/: main.ipynb
university/masters/digital-image-processing/lab1_file_formats/: .gitignore  README.md  pyproject.toml
university/masters/digital-image-processing/lab1_file_formats/file_formats/: definitions.py  main.ipynb  something.py
university/masters/digital-image-processing/lab1_file_formats/output/: sizes_table.csv
university/masters/digital-image-processing/lab2_haar_cascades/: pyproject.toml
university/masters/digital-image-processing/lab2_haar_cascades/data/output/: final_results.csv  hand_checked_results.csv  report_lab2_PL.docx  results.csv  tmp.csv
university/masters/digital-image-processing/lab2_haar_cascades/lab2_haar_cascades/: definitions.py  main.ipynb
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/: README.md  pyproject.toml
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/data/: report_lab3_PL.docx
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/data/facedb/input_1/: vardas_0.pgm  vardas_1.pgm  vardas_2.pgm  vardas_3.pgm
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/data/facedb/input_2/: vardas_0.pgm  vardas_1.pgm  vardas_2.pgm  vardas_3.pgm
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/data/output/: eigen.csv  final_eigen.csv  final_fisher.csv  final_lbph.csv  fisher.csv  lbph.csv
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/data/output/eigen/: experiment_100_75057.csv  experiment_102_75086.csv  experiment_107_75083.csv  experiment_108_75054.csv  experiment_114_6836.csv  experiment_116_75049.csv  experiment_122_75070.csv  experiment_127_65232.csv  experiment_134_18100.csv  experiment_137_80893.csv  experiment_148_75071.csv  experiment_166_60278.csv  experiment_166_90986.csv  experiment_175_63559.csv  experiment_176_60258.csv  experiment_177_4184.csv  experiment_182_85322.csv  experiment_190_10149.csv  experiment_192_4176.csv  experiment_194_97723.csv  experiment_200_2918.csv  experiment_218_50412.csv  experiment_26_22495.csv  experiment_272_78221.csv  experiment_274_54313.csv  experiment_290_4242.csv  experiment_311_62451.csv  experiment_315_67050.csv  experiment_323_47312.csv  experiment_342_36980.csv  experiment_350_25011.csv  experiment_362_35827.csv  (+73 more)
university/masters/digital-image-processing/lab3_face_recognition_method_comparison/lab3_face_recognition_method_comparison/: definitions.py  main.ipynb
(+267 files in other folders)
