[tool.poetry]
name = "practical deep learning"
version = "0.1.0"
description = "Projects, exercises and solutions related to Practical Deep Learning course published by fast.ai"
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
