[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = [{include = "labs"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
function-pipes = "^0.1.2"
toolz = "^0.12.0"
hdbscan = "^0.8.29"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
