[tool.poetry]
name = "lab1-file-formats"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = [{include = "file_formats"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
types-six = "^1.16.21.6"
types-requests = "^2.28.11.15"
mypy-extensions = "^1.0.0"
pathlib = "^1.0.1"
pandas = "^1.5.3"
pillow = "^9.4.0"
image-quality = "^1.2.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs/"
